[Styles] Add Text Styles

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,21 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TextContent" parent="TextAppearance.AppCompat">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="TextContent.Large">
+        <item name="android:textSize">34sp</item>
+    </style>
+
+    <style name="TextContent.Small">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="TextContent.Large.PrimaryColor">
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+    
 </resources>
