--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,11 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".game.GameFragment">
+
+        <TextView
+            android:id="@+id/tv_game_timer"
+            style="@style/TextContent.Small"
+            app:layout_constraintBottom_toTopOf="@+id/guideline_game_margin_bottom"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="00:00"/>
+
+        <TextView
+            android:id="@+id/tv_game_score"
+            style="@style/TextContent.Small"
+            app:layout_constraintBottom_toTopOf="@+id/tv_game_timer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="Score: 0"/>
+
+        <TextView
+            android:id="@+id/tv_game_animal"
+            style="@style/TextContent.Large.PrimaryColor"
+            app:layout_constraintBottom_toTopOf="@+id/tv_game_score"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Octopus"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_game_margin_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_end="96dp"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_game_margin_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="16dp"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_game_margin_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="16dp"/>
+
+        <Button
+            android:id="@+id/btn_game_skip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/guideline_game_margin_bottom"
+            app:layout_constraintStart_toStartOf="@+id/guideline_game_margin_start"
+            android:text="@string/btn_game_skip_text"/>
+
+        <Button
+            android:id="@+id/btn_game_correct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@id/guideline_game_margin_end"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/guideline_game_margin_bottom"
+            android:text="@string/btn_game_correct_text"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
