--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -58,6 +58,7 @@
             android:id="@+id/btn_game_skip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_skip_bg"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/guideline_game_margin_bottom"
             app:layout_constraintStart_toStartOf="@+id/guideline_game_margin_start"
@@ -67,6 +68,7 @@
             android:id="@+id/btn_game_correct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_correct_bg"
             app:layout_constraintEnd_toEndOf="@id/guideline_game_margin_end"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/guideline_game_margin_bottom"
