[Fragment Score] Add items to layout

--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -1,11 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".score.ScoreFragment">
+
+        <TextView
+            android:id="@+id/tv_score_you_answered"
+            style="@style/TextContent.Small"
+            app:layout_constraintBottom_toTopOf="@+id/tv_score_score"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/tv_score_you_answered_text"/>
+
+        <TextView
+            android:id="@+id/tv_score_score"
+            style="@style/TextContent.Large.PrimaryColor"
+            app:layout_constraintBottom_toTopOf="@+id/btn_score_play_again"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="0"/>
+
+        <TextView
+            android:id="@+id/tv_score_question"
+            style="@style/TextContent.Small"
+            app:layout_constraintTop_toBottomOf="@id/tv_score_score"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="Question"/>
+
+        <Button
+            android:id="@+id/btn_score_play_again"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_main_bg"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_score_margin_bottom"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@android:color/white"
+            android:text="@string/btn_score_play_again"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_score_margin_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_end="16dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
