[Fragment Score] Add LiveData to data binding

--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -29,6 +29,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:text="@{String.valueOf(viewModel.score)}"
             tools:text="0"/>
 
         <TextView
