--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -20,6 +20,7 @@
             app:layout_constraintBottom_toTopOf="@+id/guideline_game_margin_bottom"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:text="@{viewModel.currentTimeString}"
             tools:text="00:00"/>
 
         <TextView
