[Navigation Game] Implement animations on each fragments

--- a/app/src/main/res/navigation/navigation_game.xml
+++ b/app/src/main/res/navigation/navigation_game.xml
@@ -12,7 +12,11 @@
         tools:layout="@layout/fragment_title">
         <action
             android:id="@+id/action_title_destination_to_game_destination"
-            app:destination="@id/game_destination" />
+            app:destination="@id/game_destination"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left"/>
     </fragment>
 
     <fragment
@@ -23,6 +27,10 @@
         <action
             android:id="@+id/action_game_destination_to_score_destination"
             app:destination="@id/score_destination"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left"
             app:popUpTo="@+id/title_destination" />
     </fragment>
 
@@ -34,6 +42,10 @@
         <action
             android:id="@+id/action_score_destination_to_game_destination"
             app:destination="@id/game_destination"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left"
             app:popUpTo="@+id/title_destination" />
         <argument
             android:name="score"
