--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -72,6 +72,7 @@
             app:layout_constraintTop_toBottomOf="@+id/guideline_game_margin_bottom"
             app:layout_constraintStart_toStartOf="@+id/guideline_game_margin_start"
             android:onClick="@{() -> viewModel.onSkip()}"
+            android:textColor="@android:color/white"
             android:text="@string/btn_game_skip_text"/>
 
         <Button
@@ -83,6 +84,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/guideline_game_margin_bottom"
             android:onClick="@{() -> viewModel.onCorrect()}"
+            android:textColor="@android:color/white"
             android:text="@string/btn_game_correct_text"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
